Update cultural projects section in index.html
Added a new cultural project about the digitalization of civil records in Hidalgo.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </section>
 
             <section class="cultural-projects">
-                <h2>Proyectos Culturales Destacados</h2>
+                <h2>Proyectos Destacados</h2>
                 
                 <article class="cultural-project">
                     <h3>Festín Barrial (con Rhesident Org)</h3>
@@ -90,6 +90,9 @@
                     <h3>Documental Hña-Hñu "Chirimia"</h3>
                     <p>Junto con mi colega Jaime Arista, un etnomusicólogo joven pero con amplia trayectoria en la música prehispánica, realizamos un documental sobre su trabajo de rescate a un instrumento prácticamente extinto usado por la cultura Hña-Hñu en el Valle del Mezquital: la "chirimia". Después de casi 40 años, en 2024 se volvió a acompañar la celebración del viernes santo en Tlahuelilpan con la chirimia, una mezcla cultural única que fusiona el cristianismo actual con la cultura ancestral local.</p>
                 </article>
+                 <article class="cultural-project">
+                    <h3>Digitalización del Archivo Civil del Estado de Hidalgo</h3>
+                    <p>A través de un proyecto de modernización de documentos oficiales co-lideré la digitalización de más de 300,000 actas de nacimiento del Registro Civil de Hidalgo, incluyendo su captura digital, procesamiento visual, formato de archivos e indexación del sistema</p></article>
             </section>
 
             <section class="projects">
