Fix punctuation in project description
Added missing period at the end of a sentence in the project description.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </article>
                  <article class="cultural-project">
                     <h3>Digitalización del Archivo Civil del Estado de Hidalgo</h3>
-                    <p>A través de un proyecto de modernización de documentos oficiales co-lideré la digitalización de más de 300,000 actas de nacimiento del Registro Civil de Hidalgo, incluyendo su captura digital, procesamiento visual, formato de archivos e indexación del sistema</p></article>
+                    <p>A través de un proyecto de modernización de documentos oficiales co-lideré la digitalización de más de 300,000 actas de nacimiento del Registro Civil de Hidalgo, incluyendo su captura digital, procesamiento visual, formato de archivos e indexación del sistema.</p></article>
             </section>
 
             <section class="projects">
