--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <span class="btn-text">Descargar CV</span>
             </a>
 
-            <a href="Media/Book Iván.pdf" download class="btn-download">
+            <a href="Media/BookIvan.pdf" download class="btn-download">
                 <span class="btn-icon">📁</span>
                 <span class="btn-text">Descargar Portafolio</span> 
             </a>           
