--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
             
             <div class="roles">
-                <span>Músico y Compositor</span>
-                <span>Multi-instrumentista</span>
+                <span>Músico multi-intrumentalista</span>
+                <span>Compositor y Arreglista</span>
+                <span>Fotógrafo</span>
                 <span>Productor Musical</span>
                 <span>Productor Audiovisual</span>
                 <span>Sociólogo</span>
